0.6.0 (2014-??-??)
==================

Backwards Incompatibilities
---------------------------

* Removed the PayloadJsonDecoder which is replaced by the Lua sandbox cjson
  module (issue 826).

* Removed LogfileInput and LogfileDirectoryManagerInput which were replaced
  by LogstreamerInput in 0.5.0 (issue 914).

* MultiDecoder no longer sets prepends name of the decoder instance to the
  message type value for every message. This was impacting performance, is
  almost never what is needed, and is almost always overwritten by the nested
  subdecoders anyway.

* MultiDecoder now has a `subs` option that refers to other top level decoder
  config definitions, instead of nested sub-configs and a separate `order`
  option specifying the order. This makes for less typing and the ability to
  reuse decoder definitions as both standalone decoders and across multiple
  MultiDecoders (issue #485).

* ElasticSearchOutput now uses an Encoder plugin instead of MessageFormatters.
  Created ESJsonEncoder, ESLogstashV0Encoder, and ESPayloadEncoder
  (implemented as a SandboxEncoder in es_payload.lua) to replicate prior
  formatter behavior.

* Changed the Lua sandbox API.  inject_message is no longer overloaded, output
  has been renamed to add_to_payload, and inject_payload has been introduced.

* Changed TcpOutput, FileOutput, and LogOutput to use Encoder plugins for
  output formatting instead of bespoke formatting implementations.

* The rsyslog decoder now further parses the %SYSLOGTAG% variable. The
  fields.syslogtag no longer exists and is replaced by fields.programname and
  message.Pid (issue #677).

* Removed no-longer-used 'decoder_poolsize' global config setting.

Bug Handling
------------

* Fixed the SandboxDecoder panic when failing the Decode() after successfully
  injecting a message (issue #910).

* StatsdInput no longer spins up a new goroutine for each stat (issue #359).

* MultiDecoder no longer prevents shutdown if a nested SandboxDecoder crashes