@@ -1,0 +1,3 @@
+[not_loaded]
+type = "StatFilter"
+message_matcher = "TRUE"
